<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MeetMe!</string>
    <string name="inbox">Inbox</string>
    <string name="new_message_activity">New Message</string>

    <string name="intro">It\'s the friends we meet along the way that help us appreciate the journey.</string>

    <string name="no_internet">No internet connection found. X-P</string>
    <string name="offline_edits_dialog_title">No connection</string>
    <string name="offline_edits_prompt">You are offline. Any edits will not be saved until you are online again.</string>
    <string name="offline_messages_prompt">You are offline. New messages will not be received or delivered until you are online again.</string>
    <string name="cancel">Cancel</string>

    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="name_helper">How you will appear to others</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="email_helper">So you can chat with others</string>
    <string name="password">Password</string>
    <string name="password_helper">At least 6 characters A&#8211;Z and 0&#8211;9</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="empty_name">Please enter your name.</string>
    <string name="invalid_date">Please enter a date MM/DD/YYYY.</string>
    <string name="invalid_age">Sorry, you must be at least 18 to use MeetMe! :(</string>
    <string name="invalid_email">Please use a valid email address.</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="invalid_password">Please make sure your password meets the following criteria: \n * At least 6 characters in length \n * Contains at least one letter A&#8211;Z \n * Contains at least one number 0&#8211;9</string>
    <string name="okay">Okay</string>
    <string name="required_field">Required field</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="registration_complete">Registration Successful</string>
    <string name="verification_email">Verification email sent to <xliff:g id="email">%1$s</xliff:g> \n\nPlease verify your account before logging in.</string>
    <string name="verification_error">An error occurred. \nPlease try again later</string>
    <string name="email_error">There was a problem with the email address provided.</string>.
    <string name="user_exists_error">Email is already registered, please use another.</string>
    <string name="error_title">Oops!</string>
    <string name="unverified_email">Your account is not yet active!  Please verify your email before logging in.</string>
    <string name="resend_btn">Resend Email</string>
    <string name="go_btn">Go Now</string>
    <string name="email_sent">Email sent</string>
    <string name="enter_email_password_reset_error">Please enter a valid email</string>
    <string name="reset_failure">Unable to reset password</string>
    <string name="no_account_found">Account does not exist</string>
    <string name="reset_email_sent">A password reset email was sent to <xliff:g id="email">%1$s</xliff:g></string>

    <string name="zipcode">Zipcode</string>
    <string name="zipcode_helper">Find people near you</string>
    <string name="invalid_zipcode">Please enter a valid zipcode.</string>
    <string name="invalid_gender">Please select a gender.</string>
    <string name="invalid_sexuality">Please select a sexuality.</string>
    <string name="invalid_relationship">Please indicate your relationship status.</string>
    <string name="description">Describe yourself!</string>

    <string name="editor_instructions">Tell us a little bit more about yourself.</string>
    <string name="editor_title">Edit Profile</string>

    <string name="gender">I identify as&#8230;</string>
    <string name="gender_cismale">Man</string>
    <string name="gender_cisfemale">Woman</string>
    <string name="gender_ftm">FTM</string>
    <string name="gender_mtf">MTF</string>
    <string name="gender_neutral">Gender Neutral</string>
    <string name="gender_other">Non-binary or Other</string>

    <string name="default_selection">No selection made</string>

    <string name="gender_cismale_abbreviation">M</string>
    <string name="gender_cisfemale_abbreviation">F</string>
    <string name="gender_ftm_abbreviation">FTM</string>
    <string name="gender_mtf_abbreviation">MTF</string>
    <string name="gender_neutral_abbreviation">Neutral</string>
    <string name="gender_other_abbreviation">Other</string>

    <string name="default_selection_abbreviation">N/A</string>

    <string name="sexuality">I like&#8230;</string>
    <string name="sexuality_men">Men</string>
    <string name="sexuality_women">Women</string>
    <string name="sexuality_both">Men and Women</string>
    <string name="sexuality_any">Gender isn\'t important.</string>
    <string name="sexuality_none">I\'m not into that</string>
    <string name="sexuality_questioning">I\'m not sure</string>

    <string name="relationship">Relationship status</string>
    <string name="relationship_single_searching">Single and searching</string>
    <string name="relationship_single_not_searching">Single and loving it</string>
    <string name="relationship_taken">In a relationship</string>
    <string name="relationship_open">In an open relationship</string>

    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="upload_error">Error uploading image</string>
    <string name="remove_image">Remove</string>

    <string name="my_profile">My Profile</string>
    <string name="stats_format"><xliff:g id="age">%1$s</xliff:g> / <xliff:g id="gender">%2$s</xliff:g> / <xliff:g id="location">%3$s</xliff:g></string>
    <string name="description_title">About Me</string>s
    <string name="relationship_title">Relationship Status</string>
    <string name="unsaved_edits_prompt">Are you sure you want to discard all changes?</string>
    <string name="unsaved_edits_title">Unsaved Changes</string>
    <string name="positive_btn">Yes</string>
    <string name="negative_btn">No</string>
    <string name="change_saved">Changes saved</string>

    <string name="messages_from">From</string>
    <string name="message_date">Date</string>
    <string name="message_no_results">No messages :(</string>
    <string name="send_message">Send message</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="send_to_hint">Recipient</string>
    <string name="invalid_username">Invalid username</string>
    <string name="message_notification_title">New Message</string>
    <string name="message_notification_body">You have new messages! Read them now.</string>
    <string name="message_sent">Message sent</string>
    <string name="empty_message">Cannot send empty message</string>
    <string name="message_error">Problem sending message</string>
    <string name="message_retrieval_error">Problem loading messages</string>
    <string name="reply_btn">Reply</string>

    <string name="cd_edit_description">Edit my profile description</string>
    <string name="cd_edit_sexuality">Edit my sexual preference</string>
    <string name="cd_edit_relationship">Edit my relationship status</string>
    <string name="cd_user_profile_picture">My profile picture</string>
    <string name="cd_view_profile_picture"><xliff:g id="user_name">%1$s</xliff:g>\'s profile picture</string>
    <string name="cd_send_message">Send <xliff:g id="user_name">%1$s</xliff:g> a message</string>
    <string name="cd_add_favorite">Like <xliff:g id="user_name">%1$s</xliff:g>\'s profile? Add favorite</string>
    <string name="cd_add_friend">Add <xliff:g id="user_name">%1$s</xliff:g> to your friends list</string>
    <string name="cd_delete_message">Delete message</string>

    <string name="connect">Connect</string>
    <string name="add_favorite">User favorited</string>
    <string name="remove_favorite">Favorite removed</string>

    <string name="messages">Messages</string>
    <string name="sign_out">Sign Out</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
