<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/registration_fields_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/registration_lbl"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:hintTextAppearance="@style/FormLbl">

            <EditText
                android:id="@+id/registration_name_et"
                android:layout_width="@dimen/credentials_txt_width"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/registration_name_helper"
            style="@style/HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_helper" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:hintTextAppearance="@style/FormLbl">

            <EditText
                android:id="@+id/registration_birthday_et"
                android:layout_width="@dimen/credentials_txt_width"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:focusable="false"
                android:longClickable="false"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/registration_birthday_helper"
            style="@style/HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_field"
            android:textColor="@color/validation_error"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:hintTextAppearance="@style/FormLbl">

            <EditText
                android:id="@+id/registration_email_et"
                android:layout_width="@dimen/credentials_txt_width"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/registration_email_helper"
            style="@style/HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_helper" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:hintTextAppearance="@style/FormLbl">

            <EditText
                android:id="@+id/registration_password_et"
                android:layout_width="@dimen/credentials_txt_width"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/registration_password_helper"
            style="@style/HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_helper" />

    </LinearLayout>

    <Button
        android:id="@+id/registration_submit_btn"
        style="@style/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/registration_fields_container"
        app:layout_constraintTop_toBottomOf="@+id/registration_fields_container" />

</android.support.constraint.ConstraintLayout>