<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_title"
        style="@style/ProfileSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/zero"
        android:background="@drawable/widget_title_background"
        android:padding="@dimen/small_margin"
        android:text="@string/inbox"
        android:textColor="@color/light_text" />

    <LinearLayout
        android:id="@+id/widget_subtitles_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProfileSubtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="2"
            android:text="@string/messages_from" />

        <TextView
            style="@style/ProfileSubtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/message_date" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/accent_dark"
        android:contentDescription="@null" />

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/message_no_results"
        android:visibility="gone" />

    <ListView
        android:id="@+id/widget_messages_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin" />

</LinearLayout>