<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_msg_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/standard_margin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/credentials_btn_width"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/FormLbl">

        <EditText
            android:id="@+id/new_msg_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/send_to_hint"
            android:selectAllOnFocus="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/new_msg_recipient_helper"
        style="@style/HelperText"
        android:textColor="@color/validation_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:hintTextAppearance="@style/FormLbl"
        android:layout_marginTop="@dimen/standard_margin">

        <EditText
            android:id="@+id/new_msg_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/new_msg_send_btn"
        style="@style/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="end"/>

</LinearLayout>
