<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_margin">

    <ProgressBar
        android:id="@+id/account_prompt_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/account_prompt_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sign_up_btn"
            style="@style/LoginBtn"
            android:layout_width="@dimen/credentials_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/login_btn"
            style="@style/LoginBtn"
            android:layout_width="@dimen/credentials_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <ImageView
        android:id="@+id/start_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:rotationX="180"
        android:rotationY="180"
        android:src="@drawable/ic_format_quote_white_36dp"
        android:tint="@color/accent"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/end_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_format_quote_white_36dp"
        android:tint="@color/accent"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        style="@style/Headline"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/headline_gutter"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/intro"
        app:layout_constraintBottom_toTopOf="@id/account_prompt_button_container"
        app:layout_constraintEnd_toStartOf="@+id/end_quote"
        app:layout_constraintStart_toEndOf="@+id/start_quote"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

</android.support.constraint.ConstraintLayout>